[package]
name = "realtps_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
rand = "0.8.5"
clap = { version = "3.2.17", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
