[package]
name = "realtps_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realtps_common = { path = "../realtps_common" }
anyhow = "1.0.51"
ethers = "0.6.2"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1"
toml = "0.5.8"
futures = "0.3.19"
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["tls", "http", "ws"] }
log = "0.4.14"
env_logger = "0.9.0"
async-trait = "0.1.52"
solana-client = "1.9.1"
solana-sdk = "1.9.1"
solana-transaction-status = "1.9.1"
sp-core = "4.0.0"
sp-storage = "4.0.0"
stellar-horizon = { version = "0.6.0", optional = true }
# sodiumoxide broke API on 0.2.6 -> 0.2.7 but hey it's 0.x so whatever
sodiumoxide = { version = "0.2.6", optional = true }
near-jsonrpc-client = "0.2.0"
near-primitives = "0.11.0"
near-jsonrpc-primitives = "0.11.0"
tendermint-rpc = { version = "0.23.3", features = ["http-client"] }
tendermint = "0.23.3"
tendermint-proto = "0.23.3"
clap = { version = "3.0.2", features = ["derive"] }
reqwest = "0.11.8"

[features]
# We set up "stellar" feature because
# one of Stellar's dependencies "libsodium-sys" doesn't build on macOS.
# use `cargo run --no-default-features` to disable Stellar when needed
default = ["stellar"]
stellar = ["stellar-horizon", "sodiumoxide"]

