[package]
name = "realtps_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realtps_common = { path = "../realtps_common" }
anyhow = "1.0.51"
ethers = "0.6.2"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1"
toml = "0.5.8"
futures = "0.3.19"
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["tls", "http", "ws"] }
log = "0.4.14"
env_logger = "0.9.0"
async-trait = "0.1.52"
solana-client = "1.9.9"
solana-sdk = "1.9.9"
solana-transaction-status = "1.9.9"
sp-core = "6.0.0"
sp-storage = "6.0.0"
near-jsonrpc-client = "0.4.0"
near-primitives = "0.15.0"
near-jsonrpc-primitives = "0.15.0"
tendermint-rpc = { version = "0.23.9", features = ["http-client"] }
tendermint = "0.23.9"
tendermint-proto = "0.23.9"
clap = { version = "3.0.2", features = ["derive"] }
reqwest = "0.11.8"
chrono = "0.4.19"
algonaut = "0.4.2"
