[package]
name = "realtps_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realtps_common = { path = "../realtps_common" }
anyhow = "1.0.62"
ethers = "0.17.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8.5"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
toml = "0.5.9"
futures = "0.3.23"
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["tls", "http", "ws"] }
log = "0.4.17"
env_logger = "0.9.0"
async-trait = "0.1.57"
solana-client = "1.9.9"
solana-sdk = "1.9.9"
solana-transaction-status = "1.9.9"
sp-core = "6.0.0"
sp-storage = "6.0.0"
near-jsonrpc-client = "0.4.0"
near-primitives = "0.15.0"
near-jsonrpc-primitives = "0.15.0"
tendermint-rpc = { version = "0.23.9", features = ["http-client"] }
tendermint = "0.23.9"
tendermint-proto = "0.23.9"
clap = { version = "3.2.17", features = ["derive"] }
reqwest = "0.11.11"
chrono = "0.4.22"
algonaut = "0.4.2"
log4rs = { version = "1.1.1", features = ["background_rotation"] }
tempdir = "0.3.7"
