[package]
name = "realtps_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realtps_common = { path = "../realtps_common" }
rocket = "0.5.0-rc.1"
serde = { version = "1.0.132", features = ["derive"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]


