[package]
name = "realtps_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realtps_common = { path = "../realtps_common" }
rocket = "0.5.0-rc.2"
serde = { version = "1.0.143", features = ["derive"] }
chrono = "0.4.22"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]


